Two buttons as a row in popup Fix hiding scroll down button while jumping

--- a/src/scss/partials/popups/_popup.scss
+++ b/src/scss/partials/popups/_popup.scss
@@ -97,7 +97,19 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-end;
-		align-items: flex-end;
+    align-items: flex-end;
+    
+    &-row {
+      flex-direction: row-reverse;
+      justify-content: flex-start;
+
+      .btn {
+        & + .btn {
+          margin-top: 0 !important;
+          margin-right: .5rem;
+        }
+      }
+    }
 		
 		.btn {
 			background: none;
